--- a/SolutionMisOfertas/MisOfertas.Web/Views/Account/Register.cshtml
+++ b/SolutionMisOfertas/MisOfertas.Web/Views/Account/Register.cshtml
@@ -24,7 +24,8 @@
                @class = "form-control input-xxlarge",
                @onblur = "validarFormatoRut(this)",
                @onfocus = "limpiarFormatoRut(this)",
-               @oninput = "validarInputRut(this)"
+               @oninput = "validarInputRut(this)",
+               @maxlength = "9"
            })
                 @Html.ValidationMessageFor(model => model.Run, "", new { @style = "color:red" })
                 <script src="~/Scripts/ValidadorRut.js"></script>
@@ -62,8 +63,9 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Sexo, new { @class = "control-label col-sm-5" })
             <div class="col-sm-4">
-                @Html.EnumDropDownListFor(model => model.SexoReg, new { @class = "input-xxlarge form-control", @maxlength = "45" })
-                @Html.ValidationMessageFor(model => model.SexoReg, "Se debe seleccionar un sexo.", new { @style = "color:red" })
+                @Html.RadioButtonFor(m => m.Sexo, "Hombre") Hombre
+                @Html.RadioButtonFor(m => m.Sexo, "Mujer") Mujer
+                @Html.ValidationMessageFor(model => model.Sexo, "", new { @style = "color:red" })
             </div>
         </div>
         <div class="form-group">
