--- a/SolutionMisOfertas/MisOfertas.Web/Views/Home/About.cshtml
+++ b/SolutionMisOfertas/MisOfertas.Web/Views/Home/About.cshtml
@@ -35,7 +35,7 @@
             <center><img class="img-responsive" src="https://nyc-wpengine.netdna-ssl.com/wp-content/uploads/2016/12/Shopping-4-Xmas.jpg" alt=""></center>
             <hr>
             <!-- Post Content -->
-            <p class="lead" style="color:darkorange;">Representamos los intereses de las tiendas y sus trabajadores, se preocupa de mantener el abastecimiento nacional y mantener una buena realcion con el consumidor.</p>
+            <p class="lead" style="color:darkorange;">Representamos los intereses de las tiendas y sus trabajadores, nos preocupamos de mantener el abastecimiento nacional y mantener una buena realcion con el consumidor.</p>
             <p>Nosotros como Asociacion nacional de tiendas de retail, tenemos funciones para dar el apoyo a la operacion de las tiendas y sus canales de distribucion, en una funcion orientada al servicio a la comunidad, con una vision de proteccion al medio ambiente, todo lo anterior procurando una excelencia en el servicio a los clientes. Desde el punto de vista legal, nos preocupamos de velar por el cumplimiento de las normas y participacion etica y antender las inquietudes de proveedores y clientes.</p>
             <p>Nuestra labor es ofrecer permanentemente los mejores productos a los consumidores, manteniendo en estas empresas una frecuencia en la circulacion de los productos, es decir, comprar y vender sin que los productos esten almacenados mas del tiempo necesario para asegurar su calidad.</p>
             <hr>
